--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "facebook-login-vuejs": "^2.1.3",
     "onsenui": "^2.9.2",
     "vue": "^2.5.16",
+    "vue-facebook-login-component": "^1.3.5",
     "vue-onsenui": "^2.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
